tests/parsing/dimacs/errors/008_clause_unended_1.expected
File "tests/parsing/dimacs/errors/008_clause_unended_1.cnf", line 2, character 4-5:
2 | 1 0 0
        ^
Error while parsing a clause, read the integer '0',
      but expected a newline to properly finish the clause after the zero.
